--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <h2><b>e-mail adress:</b> cosmoreddog@gmail.com</h2>
-  <h2><b>phone number:</b> +40785674951</h2>
+  <h2><b>phone number:</b> +4078567xxxx</h2>
   <h3><b>social page:</b> <a href="https://www.facebook.com/cosmoreddog">https://www.facebook.com/cosmoreddog</a></h3>
 <hr>
 <!--action=index.html..te arunca in pagina initala, trebuie setat o aplicatie de mailto -->
-<form class="" action="emailto:cosmoreddog@gmail.com" method="post" enctype="text/plain">
+<form class="" action="emailto:cosmoredxxx@gmail.com" method="post" enctype="text/plain">
   <label>Your Name:</label>
   <input type="text" name="yourName" value=""><br>
     <label>Your E-mail</label>
